Add user authentication and authorization

--- a/dot-net-api/appsettings.json
+++ b/dot-net-api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "JwtKey": "todo-private-key-should-be-set-and-securely-stored",
+    "JwtExpireDays": 15,
+    "JwtIssuer": "https://ClimbingGyms.com"
+  }
 }
