--- a/dot-net-api/dot-net-api.csproj
+++ b/dot-net-api/dot-net-api.csproj
@@ -26,4 +26,12 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Properties\PublishProfiles\climbing-gym-publish-profile.pubxml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
