--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,28 @@
 on:
-  push:
+  pull_request:
     branches: [main]
 
-
 jobs:
-
-
   build:
+    name: Build and Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
+        
+      - name: Setup .net sdk
+        uses: actions/setup-dotnet@v4.1.0
+        with:
+          dotnet-version: 8.0.x
 
-  runs-on: linux
-  
-    - name: Checkout
-      uses: actions/checkout@v4.2.2
+      - name: Restore dependencies
+        run: dotnet restore
 
-- name: Setup .net sdk
-uses: actions/setup-dotnet@v4.1.0
+      - name: Build
+        run: dotnet build
 
-    - name: Restore dependencies
-    run: dotnet restore
-
-    - name: Build
-    run: dotnet build
-
-    - name: Run tests
-    run: dotnet test
+      - name: Run tests
+        run: dotnet test
 
   
 
