--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -56,3 +56,23 @@ jobs:
           app-name: 'climbing-gym-dev'
           publish-profile: ${{ secrets.PUBLISH_PROFILE_DEV }}
 
+  deploy-prod:
+    runs-on: ubuntu-latest
+    needs: deploy-dev
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-azure.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: api-artifact
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-azure
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'climbing-gym-prod'
+          publish-profile: ${{ secrets.PUBLISH_PROFILE_PROD }}
+
